@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.linux.nm"
        name="Network-Manager"
-       version="0.1.3"
+       version="0.1.4"
        provider-name="vikjon0">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
