@@ -1,3 +1,6 @@
+[B]Version 0.1.4[/B]
+Check for dbus and nm on init
+
 [B]Version 0.1.3[/B]
 Check number of wifi devices on init
 Access Points sorted by strength
